--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>806</width>
-    <height>445</height>
+    <width>810</width>
+    <height>422</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -15,11 +15,17 @@
   <widget class="QTabWidget" name="tabWidget" >
    <property name="geometry" >
     <rect>
-     <x>12</x>
-     <y>33</y>
-     <width>781</width>
-     <height>346</height>
+     <x>9</x>
+     <y>9</y>
+     <width>792</width>
+     <height>363</height>
     </rect>
+   </property>
+   <property name="minimumSize" >
+    <size>
+     <width>792</width>
+     <height>363</height>
+    </size>
    </property>
    <property name="autoFillBackground" >
     <bool>false</bool>
@@ -40,89 +46,11 @@
     <attribute name="title" >
      <string>Run Numbers</string>
     </attribute>
-    <widget class="QLineEdit" name="userfile_edit" >
-     <property name="geometry" >
-      <rect>
-       <x>468</x>
-       <y>11</y>
-       <width>204</width>
-       <height>28</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="userfileBtn" >
-     <property name="geometry" >
-      <rect>
-       <x>680</x>
-       <y>11</y>
-       <width>80</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Browse ...</string>
-     </property>
-     <property name="autoDefault" >
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="datadir_edit" >
-     <property name="geometry" >
-      <rect>
-       <x>98</x>
-       <y>9</y>
-       <width>183</width>
-       <height>28</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_7" >
-     <property name="geometry" >
-      <rect>
-       <x>14</x>
-       <y>15</y>
-       <width>85</width>
-       <height>18</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Data directory</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="data_dirBtn" >
-     <property name="geometry" >
-      <rect>
-       <x>288</x>
-       <y>9</y>
-       <width>80</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>Browse ...</string>
-     </property>
-     <property name="autoDefault" >
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_11" >
-     <property name="geometry" >
-      <rect>
-       <x>419</x>
-       <y>17</y>
-       <width>52</width>
-       <height>18</height>
-      </rect>
-     </property>
-     <property name="text" >
-      <string>User file</string>
-     </property>
-    </widget>
     <widget class="QGroupBox" name="groupBox" >
      <property name="geometry" >
       <rect>
        <x>20</x>
-       <y>61</y>
+       <y>70</y>
        <width>228</width>
        <height>191</height>
       </rect>
@@ -351,8 +279,8 @@
     <widget class="QGroupBox" name="groupBox_2" >
      <property name="geometry" >
       <rect>
-       <x>271</x>
-       <y>60</y>
+       <x>270</x>
+       <y>72</y>
        <width>224</width>
        <height>190</height>
       </rect>
@@ -582,7 +510,7 @@
      <property name="geometry" >
       <rect>
        <x>522</x>
-       <y>60</y>
+       <y>72</y>
        <width>232</width>
        <height>191</height>
       </rect>
@@ -811,9 +739,9 @@
     <widget class="QWidget" name="gridLayoutWidget" >
      <property name="geometry" >
       <rect>
-       <x>24</x>
-       <y>271</y>
-       <width>168</width>
+       <x>22</x>
+       <y>281</y>
+       <width>254</width>
        <height>33</height>
       </rect>
      </property>
@@ -825,10 +753,96 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
+      <item row="0" column="2" >
        <widget class="QPushButton" name="plotBtn" >
         <property name="text" >
          <string>Plot</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QPushButton" name="reduceBtn" >
+        <property name="text" >
+         <string>Reduce Data</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="horizontalLayoutWidget" >
+     <property name="geometry" >
+      <rect>
+       <x>21</x>
+       <y>14</y>
+       <width>733</width>
+       <height>42</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_11" >
+      <item>
+       <widget class="QLabel" name="label_7" >
+        <property name="text" >
+         <string>Data directory</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="datadir_edit" >
+        <property name="minimumSize" >
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="data_dirBtn" >
+        <property name="text" >
+         <string>Browse</string>
+        </property>
+        <property name="autoDefault" >
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_11" >
+        <property name="text" >
+         <string>User file</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="userfile_edit" >
+        <property name="minimumSize" >
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="userfileBtn" >
+        <property name="text" >
+         <string>Load</string>
+        </property>
+        <property name="autoDefault" >
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -855,46 +869,6 @@
       <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout_4" >
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_3" >
-        <property name="text" >
-         <string>Radius(mm)</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_16" >
-        <property name="text" >
-         <string>Wavelength(Angstroms)</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" >
-       <widget class="QLabel" name="label_19" >
-        <property name="text" >
-         <string>Q(Angstroms^-1)</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0" >
-       <widget class="QLabel" name="label_21" >
-        <property name="text" >
-         <string>Qy(Angstroms^-1)</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" >
-       <widget class="QLineEdit" name="rad_min" />
-      </item>
-      <item row="2" column="1" >
-       <widget class="QLineEdit" name="wav_min" />
-      </item>
-      <item row="3" column="1" >
-       <widget class="QLineEdit" name="q_min" />
-      </item>
-      <item row="4" column="1" >
-       <widget class="QLineEdit" name="qy_min" />
-      </item>
       <item row="0" column="0" >
        <spacer name="horizontalSpacer_2" >
         <property name="orientation" >
@@ -920,6 +894,46 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>Radius (mm)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_16" >
+        <property name="text" >
+         <string>Wavelength (Angstroms)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" >
+       <widget class="QLabel" name="label_19" >
+        <property name="text" >
+         <string>Qx (Angstroms^-1)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" >
+       <widget class="QLabel" name="label_21" >
+        <property name="text" >
+         <string>Qxy (Angstroms^-1)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" >
+       <widget class="QLineEdit" name="rad_min" />
+      </item>
+      <item row="2" column="1" >
+       <widget class="QLineEdit" name="wav_min" />
+      </item>
+      <item row="3" column="1" >
+       <widget class="QLineEdit" name="q_min" />
+      </item>
+      <item row="4" column="1" >
+       <widget class="QLineEdit" name="qy_min" />
       </item>
       <item row="1" column="3" >
        <widget class="QLineEdit" name="rad_max" />
@@ -1036,37 +1050,12 @@
        </widget>
       </item>
      </layout>
-     <zorder>label_3</zorder>
-     <zorder>label_16</zorder>
-     <zorder>label_19</zorder>
-     <zorder>label_21</zorder>
-     <zorder>rad_min</zorder>
-     <zorder>wav_min</zorder>
-     <zorder>q_min</zorder>
-     <zorder>qy_min</zorder>
-     <zorder>rad_max</zorder>
-     <zorder>label_23</zorder>
-     <zorder>wav_max</zorder>
-     <zorder>q_max</zorder>
-     <zorder>qy_max</zorder>
-     <zorder>rad_step_lbl</zorder>
-     <zorder>wav_step_lbl</zorder>
-     <zorder>q_step_lbl</zorder>
-     <zorder>qy_step_lbl</zorder>
-     <zorder>rad_dr</zorder>
-     <zorder>wav_dw</zorder>
-     <zorder>q_dq</zorder>
-     <zorder>qy_dqy</zorder>
-     <zorder>wav_dw_opt</zorder>
-     <zorder>q_dq_opt</zorder>
-     <zorder>qy_dqy_opt</zorder>
-     <zorder>label_13</zorder>
     </widget>
     <widget class="QGroupBox" name="groupBox_5" >
      <property name="geometry" >
       <rect>
        <x>515</x>
-       <y>14</y>
+       <y>9</y>
        <width>222</width>
        <height>122</height>
       </rect>
@@ -1126,10 +1115,10 @@
     <widget class="QGroupBox" name="groupBox_6" >
      <property name="geometry" >
       <rect>
-       <x>506</x>
-       <y>158</y>
+       <x>514</x>
+       <y>168</y>
        <width>264</width>
-       <height>142</height>
+       <height>153</height>
       </rect>
      </property>
      <property name="title" >
@@ -1171,14 +1160,14 @@
     <widget class="QGroupBox" name="groupBox_7" >
      <property name="geometry" >
       <rect>
-       <x>58</x>
-       <y>196</y>
-       <width>128</width>
+       <x>8</x>
+       <y>184</y>
+       <width>157</width>
        <height>74</height>
       </rect>
      </property>
      <property name="title" >
-      <string>Beam Centre</string>
+      <string>Beam Centre(mm)</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout" >
       <item>
@@ -1186,6 +1175,9 @@
         <property name="font" >
          <font>
           <pointsize>14</pointsize>
+          <weight>50</weight>
+          <bold>false</bold>
+          <kerning>true</kerning>
          </font>
         </property>
         <property name="text" >
@@ -1194,7 +1186,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_18" />
+       <widget class="QLineEdit" name="beam_x" >
+        <property name="text" >
+         <string/>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLabel" name="label_31" >
@@ -1209,7 +1205,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineEdit_19" />
+       <widget class="QLineEdit" name="beam_y" />
       </item>
       <item>
        <widget class="QLabel" name="label_32" >
@@ -1228,21 +1224,21 @@
     <widget class="QGroupBox" name="groupBox_8" >
      <property name="geometry" >
       <rect>
-       <x>255</x>
-       <y>197</y>
-       <width>147</width>
+       <x>201</x>
+       <y>183</y>
+       <width>156</width>
        <height>75</height>
       </rect>
      </property>
      <property name="title" >
-      <string>Phi</string>
+      <string>Phi (degrees)</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_5" >
       <item row="0" column="0" >
-       <widget class="QLineEdit" name="lineEdit_4" />
+       <widget class="QLineEdit" name="phi_min" />
       </item>
       <item row="0" column="2" >
-       <widget class="QLineEdit" name="lineEdit_7" />
+       <widget class="QLineEdit" name="phi_max" />
       </item>
       <item row="0" column="1" >
        <widget class="QLabel" name="label_33" >
@@ -1253,41 +1249,124 @@
       </item>
      </layout>
     </widget>
-   </widget>
-  </widget>
-  <widget class="QWidget" name="layoutWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>13</x>
-     <y>399</y>
-     <width>781</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_11" >
-    <item>
-     <spacer name="horizontalSpacer" >
-      <property name="orientation" >
-       <enum>Qt::Horizontal</enum>
+    <widget class="QGroupBox" name="groupBox_9" >
+     <property name="geometry" >
+      <rect>
+       <x>38</x>
+       <y>274</y>
+       <width>100</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="title" >
+      <string>Scaling Factor</string>
+     </property>
+     <widget class="QLabel" name="scale_lbl" >
+      <property name="geometry" >
+       <rect>
+        <x>11</x>
+        <y>18</y>
+        <width>78</width>
+        <height>16</height>
+       </rect>
       </property>
-      <property name="sizeHint" stdset="0" >
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton" >
       <property name="text" >
-       <string>Hide</string>
+       <string/>
+      </property>
+      <property name="alignment" >
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
-    </item>
-   </layout>
-   <zorder>pushButton</zorder>
-   <zorder>horizontalSpacer</zorder>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="tab_3" >
+    <attribute name="title" >
+     <string>Mask</string>
+    </attribute>
+    <widget class="QGroupBox" name="groupBox_10" >
+     <property name="geometry" >
+      <rect>
+       <x>50</x>
+       <y>11</y>
+       <width>256</width>
+       <height>229</height>
+      </rect>
+     </property>
+     <property name="title" >
+      <string>Default Mask</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout" >
+      <item>
+       <widget class="QTableWidget" name="def_mask_table" >
+        <property name="editTriggers" >
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
+        <column>
+         <property name="text" >
+          <string>Type</string>
+         </property>
+        </column>
+        <column>
+         <property name="text" >
+          <string>Details</string>
+         </property>
+        </column>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QPushButton" name="showMaskBtn" >
+     <property name="geometry" >
+      <rect>
+       <x>39</x>
+       <y>255</y>
+       <width>83</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text" >
+      <string>Display Mask</string>
+     </property>
+    </widget>
+    <widget class="QGroupBox" name="groupBox_11" >
+     <property name="geometry" >
+      <rect>
+       <x>346</x>
+       <y>13</y>
+       <width>321</width>
+       <height>95</height>
+      </rect>
+     </property>
+     <property name="title" >
+      <string>User Mask</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2" >
+      <item>
+       <widget class="QLabel" name="label_25" >
+        <property name="text" >
+         <string>Spectra IDs</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="user_maskEdit" />
+      </item>
+     </layout>
+    </widget>
+   </widget>
+  </widget>
+  <widget class="QPushButton" name="hideBtn" >
+   <property name="geometry" >
+    <rect>
+     <x>739</x>
+     <y>387</y>
+     <width>67</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Hide</string>
+   </property>
   </widget>
  </widget>
  <tabstops>
@@ -1314,22 +1393,54 @@
   <tabstop>direct_can_prd</tabstop>
   <tabstop>direct_bkgd_edit</tabstop>
   <tabstop>direct_bckd_prd</tabstop>
+  <tabstop>load_dataBtn</tabstop>
+  <tabstop>reduceBtn</tabstop>
+  <tabstop>plotBtn</tabstop>
+  <tabstop>rad_min</tabstop>
+  <tabstop>rad_max</tabstop>
+  <tabstop>rad_dr</tabstop>
+  <tabstop>wav_min</tabstop>
+  <tabstop>wav_max</tabstop>
+  <tabstop>wav_dw</tabstop>
+  <tabstop>wav_dw_opt</tabstop>
+  <tabstop>q_min</tabstop>
+  <tabstop>q_max</tabstop>
+  <tabstop>q_dq</tabstop>
+  <tabstop>q_dq_opt</tabstop>
+  <tabstop>qy_min</tabstop>
+  <tabstop>qy_max</tabstop>
+  <tabstop>qy_dqy</tabstop>
+  <tabstop>qy_dqy_opt</tabstop>
+  <tabstop>spec_min</tabstop>
+  <tabstop>spec_max</tabstop>
+  <tabstop>tof_min</tabstop>
+  <tabstop>tof_max</tabstop>
+  <tabstop>beam_x</tabstop>
+  <tabstop>beam_y</tabstop>
+  <tabstop>phi_min</tabstop>
+  <tabstop>phi_max</tabstop>
+  <tabstop>direct_file</tabstop>
+  <tabstop>hab_file</tabstop>
+  <tabstop>flat_file</tabstop>
+  <tabstop>showMaskBtn</tabstop>
+  <tabstop>def_mask_table</tabstop>
+  <tabstop>hideBtn</tabstop>
  </tabstops>
  <resources/>
  <connections>
   <connection>
-   <sender>pushButton</sender>
+   <sender>hideBtn</sender>
    <signal>clicked()</signal>
    <receiver>SANSRunWindow</receiver>
    <slot>hide()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>405</x>
-     <y>403</y>
+     <x>764</x>
+     <y>393</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>413</x>
-     <y>225</y>
+     <x>404</x>
+     <y>207</y>
     </hint>
    </hints>
   </connection>
